# webquills-sitebuilder

./: .dockerignore  .env.docker  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  example.env  manage.py  plan-webquillsSitebuilder.md  pyproject.toml  run  sparse-checkout.md  tox.ini
.github/: copilot-instructions.md
.github/workflows/: release.yml  test.yml
docker/: init-db.sh
docs/: GITEA_INTEGRATION.md
gitea_client/: README.md  __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
gitea_client/api/: __init__.py  activitypub_api.py  admin_api.py  issue_api.py  miscellaneous_api.py  notification_api.py  organization_api.py  package_api.py  repository_api.py  settings_api.py  user_api.py
gitea_client/models/: __init__.py  action_task.py  action_task_response.py  activity.py  add_collaborator_option.py  annotated_tag.py  branch.py  branch_protection.py  change_files_options.py  combined_status.py  comment.py  commit.py  commit_status.py  compare.py  contents_response.py  create_branch_protection_option.py  create_file_options.py  create_o_auth2_application_options.py  create_pull_request_option.py  create_pull_review_options.py  create_tag_protection_option.py  delete_file_options.py  deploy_key.py  edit_branch_protection_option.py  edit_repo_option.py  edit_tag_protection_option.py  file_commit_response.py  file_delete_response.py  file_response.py  files_response.py  git_tree_response.py  gpg_key.py  issue.py  issue_config.py  issue_labels_option.py  issue_template.py  markdown_option.py  markup_option.py  merge_upstream_request.py  merge_upstream_response.py  (+38 more)
project_name/: asgi.py  settings.py  urls.py  wsgi.py
sitebuilder/: adapters.py  apps.py  settings.py  urls.py  views.py
sitebuilder/locale/en/LC_MESSAGES/: django.po
sitebuilder/management/commands/: create_socialapp.py  socialapp.py
sitebuilder/templates/: base.html  index.html  profile.html
sitebuilder/templates/account/: base.html  email.html  login.html  password_change.html
sitebuilder/templates/allauth/elements/: field.html  fields.html  form.html
sitebuilder/templates/allauth/layouts/: base.html
sitebuilder/templates/mfa/: index.html
sitebuilder/templates/socialaccount/: connections.html
tests/: README.md  __init__.py  base.py  test_adapters.py  test_authentication.py  test_management_commands.py  test_views.py
