[project]
name = "sitebuilder"
version = "5.2.0"
description = "A Django 5.2 project template"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2,<6.0",
    "django-allauth[socialaccount,mfa]>=65.12.0",
    "django-environ>=0.11.0",
    "django-extensions>=3.2.3",
    "docutils>=0.21",
    "pillow>=10.4.0",
    "rich>=13.8.0",
    "granian>=1.6.0",
    "django-crispy-forms>=2.4",
    "crispy-bootstrap5>=2025.6",
    "django-bootstrap5>=25.2",
]

[dependency-groups]
dev = [
    "coverage>=7.10.7",
    "django-debug-toolbar>=6.0.0",
    "djlint>=1.36.4",
    "ipython>=8.37.0",
    "pre-commit>=4.3.0",
    "ruff>=0.14.0",
    "tox>=4.31.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "DJ",   # flake8-django
    "LOG",  # flake8-logging
    "T20",  # flake8-print
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["E501"]
"manage.py" = ["E402"]
"*/celery.py" = ["T201"]  # Allow print in debug tasks

[tool.ruff.lint.isort]
known-first-party = ["sitebuilder"]

[tool.djlint]
close_void_tags = true
custom_blocks = "element,slot"
format_css = true
format_js = true
indent = 2
max_line_length = 119
profile = "django"
# https://www.djlint.com/docs/linter/#rules
# D018 (Django) Internal links should use the {% url ... %} pattern.
# H017 Void tags should be self closing.
# H023 Do not use entity references.
# H030 Consider adding meta description.
# H031 Consider adding meta keywords.
# H035 Meta tags should be self closing.
# T001 Variables should be wrapped in whitespace. Ex: {{ this }}
# T002 Double quotes should be used in tags.
ignore = "D018,H023,H030,H031,T002"
include = "H017,H035"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2
